* Fixed bug in `CallStep` which prevented Java serialization due to non-serializable `ServiceCallContext` and `Service` usage.
* Fixed bug in `Operator` which was caused only a single method parameter to be Collection type checked instead of all parameters.
* Addded support for hot reloading of SSL certificates in Gremlin Server.
* Increased default `max_content_length`/`max_msg_size` in `gremlin-python` from 4MB to 10MB.
* Added the `PopContaining` interface designed to get label and `Pop` combinations held in a `PopInstruction` object.
* Fixed bug preventing a vertex from being dropped and then re-added in the same `TinkerTransaction`
* Fixed bug which could cause a 'Conflict: element modified in another transaction' when a transaction is attempting to add/drop/update a vertex or edge while another transaction is reading the same vertex or edge.

[[release-3-7-3]]
=== TinkerPop 3.7.3 (October 23, 2024)

This release also includes changes from <<release-3-6-8, 3.6.8>>.

* Refactored mutation events registration by moving reusable code from relevant steps to `EventUtil`
* Opened `NoOpBarrierStep` for extensibility (removed `final` keyword).
* Deprecated public constructor for `SeedStrategy` in favor of builder pattern to be consistent with other strategies.
* Allowed specification of a customized Spark app name.
* Added getter method to `CoinStep` for its probability field.
* Prevented decimal values from being parsed by `asDate()`.
* Prevented specification of `Cardinality` to `option()` when not used in conjunction with `mergeV()`.
* Exposed a mechanism for providers to customize the assertion of error messages in feature tests.
* Attempted to detect JDK version for Gremlin Console to avoid problems with Java 17 if `neo4j-gremlin` is used.
* Fixed so that `TrimGlobalStep` and `TrimLocalStep` have the same character control handling as `Ltrim` and `Rtrim`